[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
prost = "0.11.5"
dotenv = "0.15.0"
mongodb = "2.3.1"
serde = {version = "1.0.152", features = ["derive"]}
tonic = "0.8.3"
time = {version = "0.3.17", features = ["serde"]}

[build-dependencies]
tonic-build = "0.8.4"
